--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = ["@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/"]
+ffi = true
+solc_version = "0.8.20"
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./images" },
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
